--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
-  "name": "discord-bot",
-  "version": "1.0.0",
+  "name": "varzaBot",
+  "version": "2.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "keywords": [],
-  "author": "Jacques",
+  "author": "Valentin",
   "license": "ISC",
   "dependencies": {
     "discord.js": "^12.2.0",
     "fs": "0.0.1-security",
-    "ms": "^2.1.2"
+    "ms": "^2.1.2",
+    "puppeteer": "^7.1.0",
+    "sequelize": "^6.5.0",
+    "sqlite3": "^5.0.2"
   }
 }
